--- a/src/xarm_ros/xarm_description/config/kinematics/default/lite6_default_kinematics.yaml
+++ b/src/xarm_ros/xarm_description/config/kinematics/default/lite6_default_kinematics.yaml
@@ -41,3 +41,11 @@ kinematics:
     roll: -1.5708
     pitch: 0
     yaw: 0
+    
+  joint7:
+    x: 0
+    y: 0.0625
+    z: 0
+    roll: -1.5708
+    pitch: 0
+    yaw: 0
