--- a/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type12_HT_LDBR2.yaml
+++ b/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type12_HT_LDBR2.yaml
@@ -76,3 +76,16 @@ link6:
     x: 0.000484
     y: -0.000334
     z: -0.014217
+link7:
+  inertia:
+    ixx: 0.000130252
+    ixy: -4.285e-06
+    ixz: 3.19e-07
+    iyy: 0.000128308
+    iyz: -3.86e-07
+    izz: 0.00023249999999999999
+  mass: 0.225
+  origin:
+    x: 0.000484
+    y: -0.000334
+    z: -0.014217
