--- a/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type6_HT_BR2.yaml
+++ b/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type6_HT_BR2.yaml
@@ -76,3 +76,17 @@ link6:
     x: 0
     y: -0.00677
     z: -0.01098
+    
+link7:
+  inertia:
+    ixx: 9.3e-05
+    ixy: -0.0
+    ixz: -0.0
+    iyy: 5.87e-05
+    iyz: -3.6e-06
+    izz: 0.000132
+  mass: 0.17
+  origin:
+    x: 0
+    y: -0.00677
+    z: -0.01098
