--- a/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type9_HT_BR2.yaml
+++ b/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type9_HT_BR2.yaml
@@ -76,3 +76,17 @@ link6:
     x: 0.0
     y: -0.00194
     z: -0.0102
+    
+link7:
+  inertia:
+    ixx: 7.726e-05
+    ixy: -1.0e-06
+    ixz: -4.0e-07
+    iyy: 8.5665e-05
+    iyz: 6.0e-07
+    izz: 0.00014813999999999997
+  mass: 0.13
+  origin:
+    x: 0.0
+    y: -0.00194
+    z: -0.0102
