--- a/src/xarm_ros/uf_robot_moveit_config/config/lite6/joint_limits.yaml
+++ b/src/xarm_ros/uf_robot_moveit_config/config/lite6/joint_limits.yaml
@@ -32,3 +32,8 @@ joint_limits:
     max_velocity: 2.14
     has_acceleration_limits: false
     max_acceleration: 0
+  joint7:
+    has_velocity_limits: true
+    max_velocity: 2.14
+    has_acceleration_limits: false
+    max_acceleration: 0
