--- a/src/xarm_ros/xarm_description/config/kinematics/default/xarm6_default_kinematics.yaml
+++ b/src/xarm_ros/xarm_description/config/kinematics/default/xarm6_default_kinematics.yaml
@@ -41,3 +41,10 @@ kinematics:
     roll: -1.5708
     pitch: 0
     yaw: 0
+  joint7:
+    x: 0.076
+    y: 0.097
+    z: 0
+    roll: -1.5708
+    pitch: 0
+    yaw: 0
