Back to testing the fake simulation

--- a/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type12_HT_LDBR2.yaml
+++ b/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type12_HT_LDBR2.yaml
@@ -78,14 +78,14 @@ link6:
     z: -0.014217
 link7:
   inertia:
-    ixx: 0.000130252
-    ixy: -4.285e-06
-    ixz: 3.19e-07
-    iyy: 0.000128308
-    iyz: -3.86e-07
-    izz: 0.00023249999999999999
-  mass: 0.225
+    ixx: 8.0870749e-05
+    ixy: 0.0
+    ixz: -1.0157896e-06
+    iyy: 7.5980465e-05
+    iyz: 0.0
+    izz: 9.3127351e-05
+  mass: 1.4327573e-01
   origin:
-    x: 0.000484
-    y: -0.000334
-    z: -0.014217
+    x: 0
+    y: 0
+    z: 0
