--- a/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type9_HT_BR2.yaml
+++ b/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type9_HT_BR2.yaml
@@ -78,14 +78,14 @@ link6:
     z: -0.0102
 link7:
   inertia:
-    ixx: 7.726e-05
-    ixy: -1.0e-06
-    ixz: -4.0e-07
-    iyy: 8.5665e-05
-    iyz: 6.0e-07
-    izz: 0.00014813999999999997
-  mass: 0.13
+    ixx: 8.0870749e-05
+    ixy: 0.0
+    ixz: -1.0157896e-06
+    iyy: 7.5980465e-05
+    iyz: 0.0
+    izz: 9.3127351e-05
+  mass: 1.4327573e-01
   origin:
-    x: 0.0
-    y: -0.00194
-    z: -0.0102
+    x: 0
+    y: 0
+    z: 0
