--- a/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type6_HT2_LD.yaml
+++ b/src/xarm_ros/xarm_description/config/link_inertial/xarm6_type6_HT2_LD.yaml
@@ -78,14 +78,14 @@ link6:
     z: -0.00993
 link7:
   inertia:
-    ixx: 9.3e-05
-    ixy: -0.0
-    ixz: -0.0
-    iyy: 5.87e-05
-    iyz: -3.6e-06
-    izz: 0.000132
-  mass: 0.2136
+    ixx: 8.0870749e-05
+    ixy: 0.0
+    ixz: -1.0157896e-06
+    iyy: 7.5980465e-05
+    iyz: 0.0
+    izz: 9.3127351e-05
+  mass: 1.4327573e-01
   origin:
     x: 0
-    y: -0.00704
-    z: -0.00993
+    y: 0
+    z: 0
